--- a/src/App.css
+++ b/src/App.css
@@ -154,3 +154,52 @@ color:#E32636;
     margin-bottom: 50px;
     text-align:center;
 }
+
+.head{
+    height: 100px;
+  }
+
+#name{
+  width: 170px;
+  height: 20px;
+  margin: 5px;
+  margin-right: 5px;
+  border-radius: 0;
+  
+}
+#password{
+  margin-right: 25px;
+}
+.title__data{
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  letter-spacing: 2px;
+  margin-left: 30px;
+}
+.button{
+margin: 10px;
+margin-left: 40px;
+}
+label{
+  font-size: 18px;
+  font-family: 'Times New Roman', Times, serif;
+}
+.data__cont{
+  display: flex;
+  margin: 0 auto;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  gap:20px;
+  flex-direction: column;
+  width: 100%;
+  height: 600px;
+  background: rgb(221, 219, 219);
+  border-radius: 20px;
+}
+
+.time{
+  text-align: center;
+  font-size: 19px;
+  margin-top: -100px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
